Fixed Videos Glitch on Mobile

--- a/client/src/App/pages/Components/Video/Video.css
+++ b/client/src/App/pages/Components/Video/Video.css
@@ -1,3 +1,7 @@
 .mediaContainer{
     /* background-color: aquamarine; */
 }
+
+iframe{
+    max-width: 100% !important;
+}
